[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/Dock/unit_list.gd" type="Script" id=1]
[ext_resource path="res://addons/Dock/info_input.gd" type="Script" id=2]
[ext_resource path="res://addons/Dock/number_only.gd" type="Script" id=3]
[ext_resource path="res://addons/Dock/path_only.gd" type="Script" id=4]
[ext_resource path="res://addons/Dock/editor_unitSkills.gd" type="Script" id=5]

[node name="EditUnit" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.47015
margin_bottom = -1.47015

[node name="AddUnit" type="Button" parent="."]
margin_left = 131.883
margin_top = 0.300194
margin_right = 151.883
margin_bottom = 20.3002
text = "+"

[node name="RemoveUnit" type="Button" parent="."]
margin_left = 153.774
margin_right = 173.774
margin_bottom = 20.0
text = "-"

[node name="UnitList" type="ItemList" parent="."]
margin_top = 20.0
margin_right = 175.0
margin_bottom = 120.0
items = [ "unisinos", null, false, "Uni", null, false, "T", null, false, "Soldado 1", null, false, "Lenhador 1", null, false ]
script = ExtResource( 1 )

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 4.0
margin_top = 140.0
margin_right = 164.0
margin_bottom = 144.0
rect_scale = Vector2( 1, 2.36 )

[node name="Name" type="Label" parent="."]
margin_top = 150.0
margin_right = 107.0
margin_bottom = 164.0
text = "Name: "

[node name="LineEdit" type="LineEdit" parent="Name"]
margin_left = 4.0
margin_top = 23.0
margin_right = 161.0
margin_bottom = 47.0
text = "Unisinos"
script = ExtResource( 2 )

[node name="HP" type="Label" parent="."]
margin_top = 210.0
margin_right = 40.0
margin_bottom = 224.0
text = "HP:"

[node name="LineEdit2" type="LineEdit" parent="HP"]
margin_left = 4.0
margin_top = 24.0
margin_right = 90.0
margin_bottom = 48.0
text = "50"
max_length = 5
script = ExtResource( 3 )

[node name="Attack" type="Label" parent="."]
margin_top = 270.0
margin_right = 44.0
margin_bottom = 284.0
text = "Attack:"

[node name="LineEdit2" type="LineEdit" parent="Attack"]
margin_left = 4.0
margin_top = 25.0
margin_right = 91.0
margin_bottom = 49.0
text = "10"
max_length = 5
script = ExtResource( 3 )

[node name="Defense" type="Label" parent="."]
editor/display_folded = true
margin_top = 330.0
margin_right = 44.0
margin_bottom = 344.0
text = "Defense:"

[node name="LineEdit2" type="LineEdit" parent="Defense"]
margin_left = 4.0
margin_top = 25.0
margin_right = 91.0
margin_bottom = 49.0
text = "100"
max_length = 5
script = ExtResource( 3 )

[node name="Magic_Attack" type="Label" parent="."]
editor/display_folded = true
margin_top = 390.0
margin_right = 44.0
margin_bottom = 404.0
text = "Magic Attack:"

[node name="LineEdit2" type="LineEdit" parent="Magic_Attack"]
margin_left = 4.0
margin_top = 25.0
margin_right = 91.0
margin_bottom = 49.0
text = "10"
max_length = 5
script = ExtResource( 3 )

[node name="Magic_Defense" type="Label" parent="."]
editor/display_folded = true
margin_top = 450.0
margin_right = 98.0
margin_bottom = 464.0
text = "Magic Defense:"

[node name="LineEdit2" type="LineEdit" parent="Magic_Defense"]
margin_left = 4.0
margin_top = 25.0
margin_right = 91.0
margin_bottom = 49.0
text = "100"
max_length = 5
script = ExtResource( 3 )

[node name="Movement" type="Label" parent="."]
margin_top = 510.0
margin_right = 98.0
margin_bottom = 524.0
text = "Movement:"

[node name="LineEdit2" type="LineEdit" parent="Movement"]
margin_left = 4.0
margin_top = 25.0
margin_right = 91.0
margin_bottom = 49.0
text = "5"
max_length = 5
script = ExtResource( 3 )

[node name="SaveButton" type="Button" parent="."]
margin_left = 126.131
margin_top = 851.47
margin_right = 176.131
margin_bottom = 881.47
text = "Save"

[node name="model" type="Button" parent="."]
margin_left = 7.0
margin_top = 593.0
margin_right = 290.0
margin_bottom = 613.0
script = ExtResource( 4 )
file_dialog_path = NodePath("../model_dialog")

[node name="Label" type="Label" parent="model"]
margin_left = -7.0
margin_top = -23.0
margin_right = 96.0
margin_bottom = -9.0
text = "Model:"

[node name="skill_list" type="Label" parent="."]
margin_left = 7.0
margin_top = 621.47
margin_right = 47.0
margin_bottom = 652.47
text = "Skills:
"
script = ExtResource( 5 )
available_list_path = NodePath("../skill_list/UnitSkills2")
list_path = NodePath("../skill_list/UnitSkills")

[node name="UnitSkills" type="ItemList" parent="skill_list"]
margin_top = 20.0
margin_right = 140.0
margin_bottom = 195.0
items = [ "Ranged Attack", null, false ]

[node name="UnitSkills2" type="ItemList" parent="skill_list"]
margin_left = 146.774
margin_top = 20.0
margin_right = 286.774
margin_bottom = 195.0
items = [ "Heal", null, false, "Attack", null, false, "Ranged Attack", null, false, "Molotov", null, false ]

[node name="Label" type="Label" parent="skill_list"]
margin_left = 168.0
margin_right = 263.0
margin_bottom = 14.0
text = "Available Skills"

[node name="RemoveSkills" type="Button" parent="skill_list"]
margin_top = 199.265
margin_right = 140.0
margin_bottom = 219.265
text = "Remove Selected"

[node name="AddSkills" type="Button" parent="skill_list"]
margin_left = 146.774
margin_top = 200.0
margin_right = 286.774
margin_bottom = 220.0
text = "Add Selected"

[node name="model_dialog" type="FileDialog" parent="."]
margin_left = 100.0
margin_top = 92.0
margin_right = 740.0
margin_bottom = 422.0
window_title = "Open a File"
mode = 0
[connection signal="button_up" from="AddUnit" to="UnitList" method="_on_AddUnit_button_up"]
[connection signal="button_up" from="RemoveUnit" to="UnitList" method="_on_RemoveUnit_button_up"]
[connection signal="button_up" from="SaveButton" to="UnitList" method="_on_SaveButton_button_up"]
[connection signal="pressed" from="model" to="model" method="_on_model_pressed"]
[connection signal="pressed" from="skill_list/RemoveSkills" to="skill_list" method="_on_RemoveSkills_pressed"]
[connection signal="pressed" from="skill_list/AddSkills" to="skill_list" method="_on_AddSkills_pressed"]
[connection signal="file_selected" from="model_dialog" to="model" method="_on_model_dialog_file_selected"]
